Update body overflow to avoid scrolling past the footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,20 +1,15 @@
 body  {
-    background-image: url("../images/dust_scratches.png");
+    background: url("../images/dust_scratches.png");
     border-color: #dddddd;
     color: #777777;
     height: auto;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    margin-top: 0;
+    width: 100%;
+
 }   
 
-#bg {
-    position: fixed; 
-    top: 0; 
-    left: 0; 
-      
-    /* Preserve aspet ratio */
-    min-width: 100%;
-    min-height: 100%;
-  }
+
 
 header,
 nav
@@ -27,8 +22,6 @@ nav
     margin-top: -10px;
     border-color: #cccccc;
     border-bottom-style: solid;
-
-
 
 }
 
@@ -118,10 +111,7 @@ a:active {
     background-color: navy;
 }
 
-a:focus {
-    background-color: green;
-    color: white;
-}
+
 h2 {
     margin-left: 2%;
 }
@@ -166,7 +156,7 @@ button {
     float: left;
     width: 100%;
     height: 20px;
-    margin-top:  5%;
+    margin-top:  12%;
     margin-bottom: 0px;
     margin-left: 0 auto;
     background-color: #4aaaa5;
@@ -541,6 +531,9 @@ button {
             margin-left: 0px;
             width: 65rem;
             height: 30%;
+        }
+        body {
+            overflow: hidden;
         }
        
     }
